# RAG-Assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  Caddyfile  Dockerfile  README.md  Taskfile.yml  docker-compose.prod.yml  docker-compose.yml  install.sh
api/: Dockerfile  (+6 more)
server/: .env.example  entrypoint.sh  pyproject.toml
server/app/: auth.py  benchmark.py  bootstrap.py  config.py  database.py  ingestion.py  ingestion_registry.json  logging_configuration.py  logging_filters.py  main.py  pdf_diag.py  rag_chain.py
server/app/api/: routes.py  schemas.py
server/app/api/routes/: auth.py  chat.py  clients.py  conversations.py  documents.py  groups.py  health.py  ingest.py
server/app/application/: uow.py
server/app/application/dto/: auth_dto.py  benchmark_dto.py  chat_dto.py  document_dto.py  ingest_dto.py
server/app/application/services/: auth_service.py  chat_service.py  document_processor.py  document_service.py  ingest_service.py
server/app/cli/: __main__.py  cli.py
server/app/cli/commands/: benchmark.py  ingest.py  pdf_diag.py  runserver.py
server/app/domain/: benchmark.py  ingestion.py  pdf_diag.py  rag.py
server/app/domain/entities/: __init__.py  chunk.py  conversation.py  document.py  message.py  user.py
server/app/domain/exceptions/: __init__.py  domain_errors.py
server/app/domain/repositories/: __init__.py  benchmark_settings_repository.py  client_assignment_repository.py  conversation_repository.py  document_repository.py  group_repository.py  ingestion_registry_repository.py  message_repository.py  rag_service_repository.py  settings_repository.py  user_repository.py  vector_store_repository.py
server/app/domain/services/: __init__.py  access_control.py  document_parser.py  password_hasher.py  token_provider.py
server/app/infrastructure/: acl.py  auth.py  clients.py  database.py  document_service.py  logging.py  qdrant_ops.py  registry.py  singleton.py  storage.py  uow_factory.py  vector_store.py
server/app/services/: chat_service.py  document_service.py  ingest_service.py  user_service.py
server/app/shared/: session.py  unit_of_work.py
server/tests/: conftest.py  test_acl.py  test_application_use_cases.py  test_auth.py  test_domain_access_control.py  test_domain_entities.py  test_domain_value_objects.py  test_hybrid_search.py  test_ingest_service_path_guard.py  test_ingestion_parsers.py  test_ingestion_text.py  test_pdf_diag.py  test_rag_chain.py  test_rag_logic.py  test_registry.py  test_use_cases_auth.py  test_use_cases_benchmark.py  test_use_cases_chat.py  test_use_cases_document.py  test_use_cases_ingest.py  test_use_cases_upload_document.py  test_user_service.py
(+135 files in other folders)
